# personalized-chess-coach

./: .gitignore  README.md  pyproject.toml  test_setup.py
frontend/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChessBoardViewer.tsx  ClassificationTable.tsx  CoachingReport.tsx  GamePreviewPanel.tsx  Layout.tsx  MoveExplanationPanel.tsx  ProfileCharts.tsx  ProgressBar.tsx
frontend/src/hooks/: useMoveAnalysis.ts  useWebSocket.ts
frontend/src/pages/: GamePage.tsx  HomePage.tsx  ProfilePage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: analysis.ts
frontend/src/utils/: pgnPreview.ts
src/: game.pgn
src/chess_coach/: __init__.py
src/chess_coach/analysis/: __init__.py  evaluator.py  game_analyzer.py  pattern_analyzer.py
src/chess_coach/api/: __init__.py  auth.py  schemas.py
src/chess_coach/api/routes/: __init__.py  analyze.py  config.py  health.py  move_analysis.py  stream.py
src/chess_coach/cli/: __init__.py
src/chess_coach/config/: __init__.py
src/chess_coach/engine/: __init__.py
src/chess_coach/llm/: __init__.py
src/chess_coach/models/: __init__.py
src/chess_coach/storage/: __init__.py
src/chess_coach/utils/: __init__.py
